# trip-planning-assistant

./: .env.example  .gitignore  Dockerfile.frontend  README.md  docker-compose.yml  fix_agents.py  medium-blog-post-thai.md  package.json  remove_google_search.py  requirements.txt  test_youtube.py  update_model.py
backend/: .dockerignore  .env.example  Dockerfile  MULTI_AGENT_README.md  ORCHESTRATION_README.md  README.md  __init__.py  agent.py  agent_instructions.py  agent_orchestrator.py  async_agent_handler.py  conversation_history.py  improved_agent_orchestrator.py  info.md  infor.md  itinerary_manager.py  logging_config.py  main.py  pyproject.toml  requirements.txt  root_agent_prompt.py  run.sh  test_direct_sub_agents.py  test_intent_classification.py  test_sub_agent_tags.py  test_sub_agents.py
backend/agents/: __init__.py  accommodation_agent.py  activity_agent.py  activity_search_agent.py  agent_system.py  callbacks.py  coordinator.py  flight_agent.py  flight_search_agent.py  memory.py  restaurant_agent.py  root_agent.py  sessions.py  travel_agent.py  travel_coordinator.py  video_agent.py  youtube_video_agent.py
backend/api/: __init__.py  async_agent_handler.py  routes.py
backend/config/: settings.py
backend/core/: __init__.py  improved_agent_orchestrator.py  state_manager.py
backend/deployment/: deploy.py  test_deployment.py
backend/docs/: tavily_integration.md
backend/logs/: enhanced_query_20250515_223433.txt  enhanced_query_20250515_225622.txt  travel_plan_20250515_223459.txt  travel_plan_20250515_225641.txt
backend/models/: schemas.py
(+252 files in other folders)
